--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,21 @@
   </head>
   <body>
     <h1>Pagina Publica</h1>
+    <p>
+      Server status:
+      <span id="lblOnline" class="text-success"><b> Online</b></span>
+      <span id="lblOffline" class="text-danger"><b>Offline</b></span>
+    </p>
+    <div class="row">
+      <div class="col">
+        <input type="text" name="" id="txtMessage" class="form-control" />
+      </div>
+      <div class="col">
+        <button type="button" id="btnSend" class="btn btn-primary">Send</button>
+      </div>
+    </div>
+
+    <script src="./socket.io/socket.io.js"></script>
     <script src="./js/client.js"></script>
   </body>
 </html>
